# async-translate

./: CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE  README.md
.github/workflows/: ci.yml
examples/: langid_example.rs  translation_example.rs
src/: error.rs  lib.rs  main.rs  options.rs  translator.rs
src/manager/: mod.rs  tests.rs
src/microsoft/: mod.rs  tests.rs
src/openai/: mod.rs  tests.rs
