[package]
name = "async-translate"
version = "0.1.0"
edition = "2024"
authors = ["Baoge <baoge@live.cn>"]
description = "A concurrent translation library supporting OpenAI and Microsoft Translator"
license = "MIT"
repository = "https://github.com/ba0ge/async-translate"
homepage = "https://github.com/ba0ge/async-translate"
documentation = "https://docs.rs/async-translate"
readme = "README.md"
keywords = ["translation", "openai", "microsoft", "async"]
categories = ["api-bindings", "internationalization"]
rust-version = "1.85"
exclude = [
    ".github/",
    "examples/",
    "tests/",
    "*.md",
]

[lib]
name = "async_translate"
path = "src/lib.rs"

[[bin]]
name = "async_translate"
path = "src/main.rs"

[[example]]
name = "translation_example"
path = "examples/translation_example.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
random_word = { version = "0.5.1", features = ["en", "ja"] }
unic-langid = "0.9"

[dev-dependencies]
tokio-test = "0.4"
